--- a/28/anime.html
+++ b/28/anime.html
@@ -29,8 +29,7 @@
         <h4>リゼロ</h4>
         <p>好きなアニメ</p>
       <div class="anime1">
-        <p>URL</p>
-        <h4><a href="https://re-zero-anime.jp/tv/">引用元</a></h4>
+        <p><a href="https://re-zero-anime.jp/tv/">公式HP</a></p>
       </div>
         <img src="image/rizero.jpg" alt="リゼロ">
     </div>
