--- a/28/home.html
+++ b/28/home.html
@@ -18,13 +18,13 @@
         <li><a href="syusinti.html">出身地</a></li>
         <li><a href="anime.html">好きなアニメ</a></li>
         <li><a href="manga.html">好きな漫画</a></li>
-        <li><a href="sukinagaem.html">趣味</a></li>
+        <li><a href="sukinagaem.html">最近好きなゲーム</a></li>
         <li><a href="tabemono.html">食べ物</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <div class="hero">
+    <div class="jikosyoukai">
       <h1>瓜生陽咲</h1>
       <h3>麻生専門学校</h3><br>
       <h3>情報ビジネス専攻科</h3><br>
