--- a/28/manga.html
+++ b/28/manga.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>好きな漫画</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>漫画</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <input type="checkbox" id="menu-toggle" class="menu-toggle" />
-  <header class="header">
-    <div class="logo">好きな漫画</div>
-    <label for="menu-toggle" class="hamburger">
-      <span></span><span></span><span></span>
-    </label>
-    <nav class="nav">
-      <ul class="nav-list">
-        <li><a href="syusinti.html">出身地</a></li>
-        <li><a href="anime.html">好きなアニメ</a></li>
-        <li><a href="manga.html">好きな漫画</a></li>
-        <li><a href="sukinagaem.html">最近はまってるゲーム</a></li>
-        <li><a href="hamatterumono.html">食べ物</a></li>
-        <li><a href="home.html">home</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div class="anime">
-        <h4>東京喰種</h4>
-        <p>好きな漫画</p>
-      <div class="anime1">
-        <p>URL</p>
-        <h4><a href="https://www.marv.jp/special/tokyoghoul/first/">HP</a></h4>
-      </div>
-        <img src="image/tokyouguru.jpg" alt="東京喰種">
+  <div class="container1">
+    <div class="text-area1">
+      <p>東京喰種</p>
+      <p><a href="https://www.marv.jp/special/tokyoghoul/first/">公式HP</a></p>
     </div>
-  </main>
+    <div class="image-area1">
+      <img src="image/tokyouguru.jpg" alt="東京グール">
+    </div>
+  </div>
+  <div class="container2">
+    <div class="text-area2">
+      <p>進撃の巨人</p>
+      <p><a href="https://shingeki.net/#/">公式HP</a></p>
+    </div>
+    <div class="image-area2">
+      <img src="image/singeki.jpg" alt="進撃の巨人">
+    </div>
+  </div>
 </body>
 </html>
