--- a/28/syusinti.html
+++ b/28/syusinti.html
@@ -1,1 +1,18 @@
-出身地
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>syusinti</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container1">
+    <div class="text-area1">
+      <p>出身地　門司港</p>
+    </div>
+    <div class="image-area1">
+      <img src="image/mojikou.jpg" alt="門司港">
+    </div>
+  </div>
+</body>
+</html>
